tests/errors/sem.no-end-statement.block.or
main :: () -> void {
    {
        x := 10;
    };
};
